--- a/meals/templates/meal_checkin.html
+++ b/meals/templates/meal_checkin.html
@@ -29,11 +29,11 @@
                     <option value="null">--</option>
                   </select> 
                 </div>
-                <div id="success" class="alert alert-success alert-dismissible fade in" style="display:none;">
+                <div id="success" class="alert alert-success alert-dismissible fade in" style="display:none; background-color: #367a3a;">
                     <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
                     <strong>Success!</strong> <span id="succ"></span>
                 </div>
-                <div id="no" class="alert alert-danger alert-dismissible fade in" style="display:none;">
+                <div id="no" class="alert alert-danger alert-dismissible fade in" style="display:none; background-color: #691e1e;">
                     <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
                     <strong>ERROR!</strong> <span id="deny"></span>
                 </div>
@@ -139,34 +139,44 @@
                           qr_id:content,
                         },
                       success: function (data, status, jqXHR) {
-                        if(status == undefined){
-                          document.getElementById('no').style.display = "block";
+                        if(jqXHR.status != 200){
+                          $('#no').fadeOut("fast");
+                          $('#no').fadeIn("fast");
                           document.getElementById('success').style.display = "none";
                           document.getElementById('deny').innerHTML = "Something went wrong.";
                         }
-                        if(status == 200){ // 200 ok means can eat
+                        
+                        if(data.success == true){ // 200 ok means can eat
                         // show success alert
-                        document.getElementById('success').style.display = "block";
+                        
+                        // document.getElementById('success').style.display = "block";
+                        $('#success').fadeOut("fast");
+                        $('#success').fadeIn("fast");
                         // Display user's diet
-                        console.log("user id "+content + " has "+data.diet);
+                        
                         // console.log(data.responseText.diet);
-                        document.getElementById('succ').innerHTML = "User allowed to entry <br> Diet: <code>" + data.diet +"</code>";
+                        document.getElementById('succ').innerHTML = "User allowed to entry <br> Diet: <b>" + data.diet +"</b>";
                         // hide no pass alert
                         document.getElementById('no').style.display = "none";
                         
-                      } else { // else, (may be 400). Has already eatern.
+                      } else { // else, (may be 400). Has already eatern. 
                         // hide success alert 
                         document.getElementById('success').style.display = "none";
-                        console.log("userid "+ content +" "+data.error);
+                        
                         document.getElementById('deny').innerHTML = data.error;
                         // show no pass alert
-                        document.getElementById('no').style.display = "block";
+                        $('#no').fadeOut("fast");
+                        $('#no').fadeIn("fast");
                         // hide alert after time desired.
                        
                       }
                       }
+                     
+                  
                     });
                   }
+
+                  
                   
                    </script>
             </div>
