ADD: online stats

--- a/stats/templates/application_stats.html
+++ b/stats/templates/application_stats.html
@@ -131,6 +131,17 @@
             <div id="resume_confirmed_stats"></div>
         </div>
     </div>
+    <h2>Online</h2>
+    <div class="row">
+        <div class="col-md-6">
+            <h3>All</h3>
+            <div id="online_stats"></div>
+        </div>
+        <div class="col-md-6">
+            <h3>Confirmed only</h3>
+            <div id="online_confirmed_stats"></div>
+        </div>
+    </div>
 
 {% endblock %}
 {% block c3script %}
@@ -139,7 +150,7 @@
           var bar_stats = ['tshirt', 'tshirt_confirmed', 'diet', 'diet_confirmed', 'origin', 'origin_confirmed',
             'university', 'university_confirmed', 'degree', 'degree_confirmed', 'lennyface', 'lennyface_confirmed'];
           var donut_stats = ['status', 'gender', 'graduation_year', 'first_timer', 'first_timer_confirmed',
-            'graduation_year_confirmed', 'resume', 'resume_confirmed'];
+            'graduation_year_confirmed', 'resume', 'resume_confirmed', 'online', 'online_confirmed'];
           bar_stats.forEach(function (element) {
                   c3.generate({
                     bindto: '#'+element+'_stats',
