--- a/stats/templates/mentor_stats.html
+++ b/stats/templates/mentor_stats.html
@@ -87,6 +87,18 @@
         </div>
 
     </div>
+    <h2>Online</h2>
+
+    <div class="row">
+        <div class="col-md-6">
+            <h3>All</h3>
+            <div id="online_stats"></div>
+        </div>
+        <div class="col-md-6">
+            <h3>Confirmed only</h3>
+            <div id="online_confirmed_stats"></div>
+        </div>
+    </div>
 
 {% endblock %}
 {% block c3script %}
@@ -94,7 +106,7 @@
         $.getJSON('{% url 'api_mentor_stats' %}', function (data) {
           var bar_stats = ['tshirt', 'tshirt_confirmed', 'diet', 'diet_confirmed', 'origin', 'origin_confirmed',
             'attendance', 'attendance_confirmed'];
-          var donut_stats = ['status', 'gender', 'study_work', 'study_work_confirmed'];
+          var donut_stats = ['status', 'gender', 'study_work', 'study_work_confirmed', 'online', 'online_confirmed'];
           bar_stats.forEach(function (element) {
                   c3.generate({
                     bindto: '#'+element+'_stats',
