Added stop previous scanner if is switching cameras

--- a/meals/templates/meal_checkin.html
+++ b/meals/templates/meal_checkin.html
@@ -121,6 +121,7 @@
                       var x = document.getElementById('btndivs').value;
                       if(x != "null"){
                           Instascan.Camera.getCameras().then(function (cameras) {
+                            scanner.stop();
                             scanner.start(cameras[x]);
                           }).catch(function (e) {
                             console.error(e);
