--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -255,6 +255,8 @@
 </script>
 <!--/cookies-->
 
+<script async src="https://easter-egg.hackupc.com/index.js"></script>
+
 {% block extra_scripts %}
 {% endblock %}
 {% if h_ga %}
