--- a/checkin/templates/checkin/hacker.html
+++ b/checkin/templates/checkin/hacker.html
@@ -12,6 +12,7 @@
 {% block panel %}
     <dl class="dl-horizontal">
         {% include 'include/field.html' with desc='Lenny face' value=app.lennyface %}
+        {% include 'include/field.html' with desc='Online' value=app.online %}
         {% include 'include/field.html' with desc='Type' value=app.user.get_type_display %}
         {% if app.user.is_sponsor %}
             {% include 'include/field.html' with desc='Name' value=app.name %}
